Fix issue with pre styling, improve element spacing

--- a/assets/_scss/_custom.scss
+++ b/assets/_scss/_custom.scss
@@ -115,7 +115,7 @@ body {
     margin-top: 1rem;
   }
 
-  p {
+  p, pre, img {
     margin-bottom: map_get($spacers, 4);
   }
 
