--- a/assets/_scss/_variables.scss
+++ b/assets/_scss/_variables.scss
@@ -1109,7 +1109,7 @@ $kbd-font-size:                     $code-font-size !default;
 $kbd-color:                         $white !default;
 $kbd-bg:                            $gray-900 !default;
 
-$pre-color:                         $gray-900 !default;
+$pre-color:                         $gray-100 !default;
 $pre-scrollable-max-height:         340px !default;
 
 
